Fixed background colors/URLs, element page alignment and clear option
git-svn-id: http://svg-edit.googlecode.com/svn/trunk@1241 eee81c28-f429-11dd-99c0-75d572ba1ddd

--- a/editor/svg-editor.css
+++ b/editor/svg-editor.css
@@ -381,8 +381,8 @@
 	stroke: none;
 }
 
-#workarea.wireframe #svgcanvas {
-	background: #FFF !important;
+#workarea.wireframe #canvasBackground rect {
+	fill: #FFF !important;
 }
 
 #svg_editor #selected_panel,
